@@ -1,3 +1,8 @@
+2001-10-01  Kevin Vandersloot <kfv101@psu.edu>
+
+	Various minor fixes and add the beginnings of gconf support
+	for the configuration
+
 2001-09-30  Kevin Vandersloot <kfv101@psu.edu>
 
 	* proctable.c: get sorting right and store the process info
